--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,27 +2,54 @@ name: ci
 
 on:
   push:
-    branches:
-      - main
-    paths-ignore:
-      - 'docs/**'
-      - '*.md'
+  pull_request:
 
 jobs:
-  test:
+  node-tests:
+    name: Node tests (Node ${{ matrix.node }})
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         node: ['18', '20']
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup node ${{ matrix.node }}
-        uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Setup Node
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node }}
-      - name: Install dependencies
-        run: npm install
+          cache: 'npm'
+
+      - name: Install deps
+        run: npm ci
+
+      - name: Run Node.js tests
+        run: npm run test:node
+
+  browser-tests:
+    name: Browser tests
+    runs-on: ubuntu-latest
+    needs: node-tests
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: '24'
+          cache: 'npm'
+
+      - name: Install deps
+        run: npm ci
+
       - name: Install Playwright browsers
-        run: npx playwright install
-      - name: Run tests
-        run: npm test
+        run: npx playwright install --with-deps
+
+      - name: Run build
+        run: npm run build
+
+      - name: Run Playwright tests
+        run: npm run test:browser
