--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "flora-client-js",
   "version": "0.5.3",
   "description": "JavaScript client for Flora based APIs",
-  "main": "dist/index.node.js",
-  "browser": "dist/index.browser.js",
   "scripts": {
-    "build": "webpack --mode=production --progress",
     "lint": "eslint src/ build/ test/",
     "lint-fix": "eslint --fix src/ build/ test/",
-    "prepublishOnly": "npm run test && npm run build",
-    "test:browser": "karma start --reporters mocha",
+    "prepublishOnly": "npm run clean; npm run build; npm run test",
+    "clean": "node -e 'const fs = require(\"fs\"); fs.globSync(\"dist/*\").forEach((file) => fs.unlinkSync(file));'",
+    "build": "rollup -c",
+    "pretest": "npm run build",
+    "test:browser": "playwright test test/flora-client-browser.spec.js",
     "test:node": "node --test test/flora-client-node.spec.js test/stringify.spec.js",
     "test": "npm run test:node && npm run test:browser"
   },
@@ -17,7 +17,7 @@
   "contributors": [
     {
       "name": "Mark Plomer",
-      "email": "mark.plomer@boerse-go.de"
+      "email": "mark.plomer@stock3.com"
     },
     {
       "name": "Nico Kaiser",
@@ -25,39 +25,36 @@
     },
     {
       "name": "Marco Baumgartl",
-      "email": "marco.baumgartl@boerse-go.de"
+      "email": "marco.baumgartl@stock3.com"
     }
   ],
+  "main": "dist/flora-client.cjs",
+  "exports": {
+    ".": {
+      "require": "./dist/flora-client.cjs"
+    }
+  },
   "files": [
-    "dist/",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "dist/*"
   ],
-  "author": "BörseGo AG",
+  "author": "stock3 AG",
   "license": "MIT",
+  "type": "module",
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "babel-loader": "^9.1.3",
-    "chai": "^4.3.10",
+    "@playwright/browser-chromium": "1.52.0",
+    "@playwright/browser-firefox": "1.52.0",
+    "@playwright/browser-webkit": "1.52.0",
+    "@playwright/test": "1.52.0",
+    "@rollup/plugin-commonjs": "^29.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.3",
     "eslint": "^8.53.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
-    "karma": "^6.4.2",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-firefox-launcher": "^2.1.2",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-webpack": "^5.0.0",
-    "mocha": "^10.2.0",
     "nock": "^13.3.8",
-    "playwright": "^1.39.0",
+    "playwright": "1.52.0",
     "prettier": "^3.0.3",
-    "sinon": "^11.1.2",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "has": "^1.0.4"
+    "rollup": "^4.53.3"
   }
 }
