--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "README.md",
     "LICENSE"
   ],
-  "author": "BörseGo AG",
+  "author": "stock3 AG",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
+    "@types/node": "^24.0.0",
     "babel-loader": "^9.1.3",
     "chai": "^4.3.10",
     "eslint": "^8.53.0",
